Replace diary-slm CLI with python main.py, flatten src/ layout
- Remove [project.scripts] entry point, add main.py as sole entry point
- Move src/diary_slm/ to diary_slm/ at project root
- Explicitly close SQLite connections in bear_reader.py
- Update all CLI references in docs and help text
- Add glm-4.7-flash to README model table, add tokens command to docs
- Fix token estimate in README (was 300k-400k, now 125k)
- Add constants.py and exceptions.py to CLAUDE.md architecture diagram

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,11 +21,8 @@ dev = [
     "ruff>=0.1.0",
 ]
 
-[project.scripts]
-diary-slm = "diary_slm.cli:main"
-
 [tool.hatch.build.targets.wheel]
-packages = ["src/diary_slm"]
+packages = ["diary_slm"]
 
 [tool.ruff]
 line-length = 100
